--- a/Kitodo/src/main/webapp/pages/currentTasksEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/currentTasksEdit.xhtml
@@ -13,9 +13,15 @@
 
 <ui:composition
         template="/WEB-INF/templates/baseListView.xhtml"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
+
+    <f:metadata>
+        <f:viewParam name="id"/>
+        <f:viewAction action="#{CurrentTaskForm.loadTaskById(id)}"/>
+    </f:metadata>
 
     <ui:define name="contentHeader">
         <h3>#{msgs.detailsDesArbeitsschritts}</h3>
