--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -67,4 +67,9 @@
         <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
         <li><a href="">#{msgs.processes}</a></li>
     </ui:define>
+
+    <ui:define name="dialog">
+        <ui:include src="/WEB-INF/templates/includes/processes/batchCreatePopup.xhtml"/>
+        <ui:include src="/WEB-INF/templates/includes/processes/batchRenamePopup.xhtml"/>
+    </ui:define>
 </ui:composition>
