--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -25,6 +25,7 @@
 
     <ui:define name="contentHeader">
         <h:outputScript name="js/save.js" target="body" />
+        <h:outputScript name="js/lockOrUnlock.js" target="body" />
         <script>
             window.onload = function () {checkForm('editForm')};
         </script>
