--- a/Kitodo/src/main/webapp/pages/clientEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/clientEdit.xhtml
@@ -16,8 +16,8 @@
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
     <f:metadata>
-        <f:viewParam name="id" value="#{ClientForm.clientId}"/>
-        <f:viewAction action="#{ClientForm.loadClient}"/>
+        <f:viewParam name="id"/>
+        <f:viewAction action="#{ClientForm.load(id)}"/>
     </f:metadata>
 
     <ui:param name="isEditMode"
