--- a/Kitodo/src/main/webapp/pages/docketEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/docketEdit.xhtml
@@ -19,7 +19,7 @@
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{DocketForm.loadDocket(id)}"/>
+        <f:viewAction action="#{DocketForm.load(id)}"/>
     </f:metadata>
 
     <ui:define name="contentHeader">
