--- a/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
@@ -17,7 +17,7 @@
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{LdapServerForm.loadLdapServer(id)}"/>
+        <f:viewAction action="#{LdapServerForm.load(id)}"/>
     </f:metadata>
 
     <ui:param name="isEditMode"
