Unify naming in ProcessForm

--- a/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
+++ b/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
@@ -19,7 +19,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{ProcessForm.loadProcess(id)}" />
+        <f:viewAction action="#{ProcessForm.load(id)}" />
     </f:metadata>
 
     <ui:define name="contentHeader">
