--- a/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
@@ -19,7 +19,7 @@
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{RulesetForm.loadRuleset(id)}"/>
+        <f:viewAction action="#{RulesetForm.load(id)}"/>
     </f:metadata>
 
     <ui:define name="contentHeader">
@@ -35,7 +35,7 @@
         <p:commandButton id="save"
                          widgetVar="save"
                          value="#{msgs.save}"
-                         action="#{RulesetForm.saveRuleset}"
+                         action="#{RulesetForm.save}"
                          update="notifications"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
