--- a/Kitodo/src/main/webapp/pages/templateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/templateEdit.xhtml
@@ -35,7 +35,7 @@
         <p:commandButton id="save"
                          widgetVar="save"
                          value="#{msgs.save}"
-                         action="#{TemplateForm.saveAndRedirect}"
+                         action="#{TemplateForm.save}"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
                          disabled="#{TemplateForm.saveDisabled}"
