Unify naming in UserForm

--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -19,7 +19,7 @@
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{UserForm.loadUserObject(id)}"/>
+        <f:viewAction action="#{UserForm.load(id)}"/>
     </f:metadata>
 
     <ui:param name="isEditMode"
