--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -19,7 +19,7 @@
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{UserGroupForm.loadUserGroup(id)}"/>
+        <f:viewAction action="#{UserGroupForm.load(id)}"/>
     </f:metadata>
 
     <ui:param name="isEditMode"
