Unify naming in WorkflowForm

--- a/Kitodo/src/main/webapp/pages/workflowEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/workflowEdit.xhtml
@@ -20,7 +20,7 @@
 
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{WorkflowForm.loadWorkflow(id)}"/>
+        <f:viewAction action="#{WorkflowForm.load(id)}"/>
     </f:metadata>
 
     <ui:define name="contentHeader">
