--- a/Kitodo/src/main/webapp/pages/searchProcess.xhtml
+++ b/Kitodo/src/main/webapp/pages/searchProcess.xhtml
@@ -182,7 +182,7 @@
                                      iconPos="right"
                                      update="editForm"
                                      immediate="true"
-                                     onclick="return confirm('#{msgs.sollDerContentWirklichGeloeschtWerden}')"/>
+                                     onclick="return confirm('#{msgs.shouldContentBeRemoved}')"/>
                 </p:panel>
             </p:tab>
         </p:tabView>
