--- a/Kitodo/src/main/webapp/pages/templateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/templateEdit.xhtml
@@ -28,9 +28,12 @@
             window.onload = function () {checkForm('editForm')};
         </script>
         <h3>
-            <h:outputText value="#{msgs.editTemplate} (#{TemplateForm.template.title})" rendered="#{not empty TemplateForm.template.title}"/>
-            <h:outputText value="#{msgs.newTemplate}" rendered="#{empty TemplateForm.template.title}"/>
-            <h:outputText value="#{msgs.duplicateTemplate}" rendered="#{empty TemplateForm.template.title and not empty TemplateForm.template.docket}"/>
+            <h:outputText value="#{msgs.editTemplate} (#{TemplateForm.template.title})"
+                          rendered="#{TemplateForm.template.id ne null and TemplateForm.template.title ne null and not empty TemplateForm.template.docket}"/>
+            <h:outputText value="#{msgs.newTemplate}"
+                          rendered="#{TemplateForm.template.id eq null and TemplateForm.template.title eq null and empty TemplateForm.template.docket}"/>
+            <h:outputText value="#{msgs.duplicateTemplate}"
+                          rendered="#{TemplateForm.template.id eq null and TemplateForm.template.title eq null and not empty TemplateForm.template.docket}"/>
         </h3>
         <p:commandButton id="save"
                          widgetVar="save"
